syntax = "proto3";

option go_package = "alma-server/ap/src/infrastructure/grpc/proto/reserve";

package reserve;

import "common/common.proto";
import "google/protobuf/timestamp.proto";

// RPC
service Reserve {

    // PageHTML 予約のトップ画面
    rpc PageHTML(common.EventRequest) returns (PageReply);
}


message PageReply {
    string event_name = 1;
    string event_id = 2;
    repeated ReserveInfo reserve_info_list = 3;
}

// ReserveInfo 予約の要素
message ReserveInfo {
    string reserve_id = 1; // uniqueな予約ID
    int32 no = 2; // そのEvent内でのuniqueな番号
    string ticket_name = 3; // 予約したチケット名
    int32 ticket_num = 4; // チケット枚数
    string farst_name = 5; // 名
    string last_name = 6; // 苗字
    string notes = 7; // 備考
    string email = 8; // email
    google.protobuf.Timestamp created_at = 9; // 作成時間
    google.protobuf.Timestamp updated_at = 10; // 更新時間    
}
